# flask-techan-unchained

./: .gitignore  .prettierrc  .travis.yml  MANIFEST.in  README.md  TODO.md  celery_app.py  compose.yaml  conversation-summary.md  make-lib-symlinks.sh  migrate-to-vite-and-react-18.md  mkts.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  signals-to-code.md  unchained_config.py  update_reqs.py  vite.config.js  wsgi.py
app/: __init__.py  config.py  routes.py
app/serializers/: contact_submission_serializer.py
backend/: __init__.py  config.py  logger.py  routes.py  utils.py
backend/admins/: contact_submission_admin.py
backend/models/: __init__.py  contact_submission.py
backend/serializers/: __init__.py  contact_submission_serializer.py
backend/services/: __init__.py  contact_submission_manager.py
backend/views/: __init__.py  contact_submission_resource.py
bundles/: __init__.py
bundles/finance/: __init__.py  analysis.py  config.py  enums.py  signals.py
bundles/finance/analyzers/: __init__.py  base_symbol_analyzer.py  median_volume.py  prices.py  runner.py  ta.py
bundles/finance/commands/: __init__.py  analyze.py  data.py  group.py  init_marketstore.py
bundles/finance/filters/: __init__.py  base_opportunity_filter.py  runner.py
bundles/finance/models/: __init__.py  asset.py  asset_data_vendor.py  country.py  currency.py  data_item.py  data_item_vendor.py  data_vendor.py  equity.py  equity_index.py  exchange.py  index.py  index_data_vendor.py  industry.py  market.py  sector.py  stats.py  watchlist.py  watchlist_asset.py
bundles/finance/services/: __init__.py  asset_data_vendor_manager.py  asset_manager.py  country_manager.py  currency_manager.py  data_item_manager.py  data_item_vendor_manager.py  data_service.py  data_vendor_manager.py  equity_manager.py  exchange_manager.py  fin_models_service.py  historical_signals_service.py  index_manager.py  industry_manager.py  market_manager.py  marketstore_service.py  marketstore_service.py.bak  sector_manager.py  watchlist_manager.py
bundles/finance/utils/: __init__.py  calendar.py  pandas.py  soup.py  wiki.py
bundles/finance/vendors/: sa.py  yahoo.py
bundles/finance/views/: __init__.py  history_controller.py  watchlist_resource.py
bundles/security/: commands.py
bundles/security/admins/: user_admin.py
bundles/security/fixtures/: User.yaml
bundles/security/models/: user.py
bundles/security/serializers/: user_serializer.py
db/migrations/versions/: d7cab7a356e3_create_tables.py  f1fa43982725_.py  wtf_add_stats_table.py
docker/backend/: Dockerfile  entrypoint.sh
docker/flask/: Dockerfile  Dockerfile.prod  Procfile
docker/frontend/: Dockerfile  entrypoint.sh
docker/marketstore/: Dockerfile
docker/postgres/: Dockerfile  init-user-db.sh
docker/react/: Dockerfile  Dockerfile.prod  nginx.conf
frontend/: index.html
frontend/app/: actions.js  api.js  config.js  configureStore.js  constants.js  index.js  logging.js  reducers.js  routes.js  sagas.js
frontend/app/components/: App.js  Loadable.js
frontend/app/finance/: actions.js  api.js  constants.js  selectors.js
frontend/internals/: dllConfig.js
frontend/server/: addDevMiddlewares.js  index.js
gke/: 1-init-cluster.sh  2-install-secure-helm.sh  README.md
gke/celery/: worker-deployment.yaml
gke/flask/: deployment.yaml  service.yaml
gke/helm/: role-tiller.yaml  rolebinding-tiller.yaml
gke/jobs/: job-init-finance.yaml  job-migration.yaml
gke/marketstore/: deployment.yaml  service.yaml  stateful-set.yaml  volume_claim.yaml
gke/nginx/: ingress.yaml
gke/postgres/: secrets.yaml  service.yaml  stateful-set-master.yaml  stateful-set.yaml
gke/react/: deployment.yaml  service.yaml
gke/tls/: prod-issuer.yaml  staging-issuer.yaml
minikube/celery/: worker-deployment.yaml
minikube/flask/: deployment.yaml  service.yaml
minikube/jobs/: job-init-db.yaml  job-init-finance.yaml  job-migration.yaml
minikube/marketstore/: deployment.yaml  service.yaml  volume.yaml  volume_claim.yaml
minikube/postgres/: deployment.yaml  volume.yaml
minikube/react/: deployment.yaml  service.yaml
templates/email/: layout.html
tests/: conftest.py
tests/model_fixtures/: User.yaml
(+135 files in other folders)
