[tool.poetry]
name = "flask-techan-unchained"
version = "0.1.0"
description = ""
authors = ["Brian Cappello <briancappello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.3"
appdirs = "^1.4.4"
cachetools = "^5.3.2"
#flask-unchained = { version = "0.10.0a2", allow-prereleases = true, extras = ["api", "celery", "mail", "sqlalchemy", "session", "security" ] }
flask-unchained = { path = "../flask-unchained", develop = true, extras = ["api", "celery", "mail", "sqlalchemy", "session", "security" ] }
flask-sqlalchemy-unchained = { path = "../flask-sqlalchemy-unchained", develop = true }
sqlalchemy-unchained = { path = "../sqlalchemy-unchained", develop = true }
py-meta-utils = { path = "../py-meta-utils", develop = true }
fin-models = { path = "../fin-models", develop = true }
pandas = "^2.2.0"
psycopg2 = "^2.9.9"
requests = "^2.31.0"
ta-lib = "^0.4.28"
py-yaml-fixtures = "^0.6.2"
redis = "^5.0.1"
pdfquery = "^0.4.3"
jinja2-time = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
